# libgnl-rs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  c2rust-lib.rs  compile_commands.json  expected.txt  get_next_line.c  get_next_line.h  get_next_line.rs  get_next_line_utils.c  get_next_line_utils.rs  libgnl.rs  rust-toolchain.toml
src/: c2rust_gnl.rs  get_next_line.rs  libgnl.rs  old_broken.rs
tests/: test.txt  test_gnl.rs
