[workspace]
members = [
]
[package]
name = "libgnl_rs"
authors = ["Jonstep101010"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "libgnl"
path = "libgnl.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
libc= "0.2"
libft_rs = { package = "libft_rs", git= "https://github.com/Jonstep101010/libft-rs", branch = "main" }
