[workspace]
members = [
]
[package]
name = "libgnl_rs"
authors = ["Jonstep101010"]
version = "0.0.0"
publish = false
edition = "2024"
autobins = false

# [profile.dev]
# strip = "debuginfo"
# debug = false
# lto = false
# overflow-checks = false
# panic = "abort"
# incremental = false

[lib]
name = "get_next_line"
path = "src/libgnl.rs"
crate-type = ["staticlib"]
# for testing in rust we need an rlib (see build.rs)
[dependencies]
libc= "0.2"
nix = { version = "0.29.0", features = ["fs"] }
